--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/cors": "^2.8.15",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/pg": "^8.10.7",
+    "@types/supertest": "^2.0.15",
+    "supertest": "^6.3.3",
     "tsc-watch": "^6.0.4"
   },
   "scripts": {
